--- a/css/style.css
+++ b/css/style.css
@@ -44,16 +44,20 @@
   box-sizing: border-box;
 }
 
-a {
-  text-decoration: none;
-  display: inline-block;
+html {
+  font-size: 62.5%;
 }
 
 body {
   font-family: "League Spartan";
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 400;
-  line-height: 30px;
+  line-height: 3rem;
+}
+
+a {
+  text-decoration: none;
+  display: inline-block;
 }
 
 .container {
@@ -61,8 +65,8 @@ body {
   max-width: 1340px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 133px;
-  padding-right: 133px;
+  padding-left: 13.3rem;
+  padding-right: 13.3rem;
 }
 
 .header {
@@ -81,28 +85,28 @@ body {
 
 .header__title,
 section__title {
-  font-size: 80px;
+  font-size: 8rem;
   font-weight: 300;
   line-height: 80px;
   letter-spacing: -1px;
   width: 508px;
-  margin-top: 153px;
+  margin-top: 15.3rem;
 }
 .header-subtitle,
 section__subtitle {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 400;
   line-height: 30px;
   width: 445px;
-  margin-top: 10px;
-  margin-bottom: 40px;
+  margin-top: 1rem;
+  margin-bottom: 4rem;
 }
 .header__btn {
   color: #fff;
   border: 1px solid #ffffff;
   background-color: transparent;
   padding: 24px 55px;
-  font-size: 17px;
+  font-size: 1.7rem;
   font-weight: 600;
   line-height: 16px;
   letter-spacing: 2.5px;
@@ -126,13 +130,13 @@ section__subtitle {
   bottom: 80px;
 }
 .enjoyable-place__text {
-  margin-top: 177px;
+  margin-top: 17.7rem;
 }
 
 .enjoyable-place__title {
   margin-top: 55px;
   margin-bottom: 27px;
-  font-size: 48px;
+  font-size: 4.8rem;
   font-weight: 700;
   line-height: 48px;
   letter-spacing: -0.5px;
@@ -156,12 +160,12 @@ section__subtitle {
 }
 
 .sourced-food__text {
-  margin-top: 266px;
+  margin-top: 26.6rem;
 }
 
 .sourced-food__title {
-  margin-top: 55px;
-  margin-bottom: 27px;
+  margin-top: 5.5rem;
+  margin-bottom: 2.7rem;
 }
 
 .sourced-food__subtitle {
@@ -178,8 +182,8 @@ section__subtitle {
 .menu {
   height: 761px;
   background-color: #111;
-  padding-top: 200px;
-  padding-bottom: 120px;
+  padding-top: 20rem;
+  padding-bottom: 12rem;
   color: #fff;
 }
 .menu__container {
@@ -188,15 +192,15 @@ section__subtitle {
 }
 
 .menu__icon {
-  margin-bottom: 55px;
+  margin-bottom: 5.5rem;
 }
 .menu__title {
-  font-size: 48px;
+  font-size: 4.8rem;
   font-weight: 700;
   line-height: 48px;
   letter-spacing: -0.5px;
   width: 445px;
-  margin-bottom: 27px;
+  margin-bottom: 2.7rem;
 }
 .menu__subtitle {
   width: 445px;
@@ -212,14 +216,14 @@ section__subtitle {
 }
 
 .menu__card-title {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 700;
   line-height: 24px;
   letter-spacing: -0.25px;
 }
 .menu__card-subtitle {
   width: 350px;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 400;
   line-height: 26px;
 }
@@ -236,52 +240,52 @@ section__subtitle {
 /* Gathering section */
 
 .gathering {
-  margin: 160px auto;
+  margin: 16rem auto;
   height: 600px;
   display: flex;
   gap: 125px;
 }
 
 .gathering__text {
-  margin-top: 70px;
+  margin-top: 7rem;
   width: 445px;
 }
 .gathering__title {
   width: 445px;
-  font-size: 48px;
+  font-size: 4.8rem;
   font-weight: 700;
   line-height: 48px;
   letter-spacing: -0.5px;
   color: #242b37;
-  margin-bottom: 19px;
+  margin-bottom: 1.9rem;
 }
 .gathering__subtitle {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 400;
   line-height: 30px;
   color: #242b37;
 }
 .gathering__btn {
-  padding: 25px 55px;
+  padding: 0.25rem 5.5rem;
   background-color: #111111;
-  margin-top: 60px;
+  margin-top: 6rem;
   color: #fff;
 }
 .gathering__corusel {
-  margin-top: 79px;
+  margin-top: 7.9rem;
   display: flex;
   flex-direction: column;
   gap: 12px;
 }
 .gathering__coruel-title {
-  font-size: 17px;
+  font-size: 1.7rem;
   font-weight: 600;
   line-height: 28px;
   letter-spacing: 2.5px;
   color: #4c4c4c;
 }
 .gathering__corusel-text {
-  font-size: 17px;
+  font-size: 1.7rem;
   font-weight: 600;
   line-height: 28px;
   letter-spacing: 2.5px;
@@ -294,7 +298,7 @@ section__subtitle {
   background-image: url(../images/homepage/ready-bg-desktop@2x.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 96px 0 96px 0;
+  padding: 9.6rem 0 96px 0;
   color: #fff;
 }
 .book-container {
@@ -304,14 +308,14 @@ section__subtitle {
 }
 
 .site__footer-title {
-  font-size: 48px;
+  font-size: 4.8rem;
   font-weight: 700;
   line-height: 48px;
   letter-spacing: -0.5px;
 }
 .site__footer-btn {
-  padding: 25px 55px;
-  font-size: 17px;
+  padding: 2.5rem 5.5rem;
+  font-size: 1.7rem;
   font-weight: 600;
   line-height: 16px;
   letter-spacing: 2.5px;
@@ -346,7 +350,7 @@ section__subtitle {
   font-style: normal;
   width: 244px;
   height: 84px;
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: 400;
   line-height: 28px;
   letter-spacing: 2px;
@@ -358,7 +362,7 @@ section__subtitle {
 .site__footer-time {
   width: 446px;
   height: 84px;
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: 400;
   line-height: 28px;
   letter-spacing: 2px;
